--- a/notebooks/Data Modelling.ipynb
+++ b/notebooks/Data Modelling.ipynb
@@ -2,10 +2,64 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "278e7901",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Star schema tables created successfully.\n",
+      "\n",
+      "Sample dim_company:\n",
+      "     company  company_key\n",
+      "0  Company 2            1\n",
+      "1  Company 1            2\n",
+      "2  Company 3            3\n",
+      "\n",
+      "Sample dim_customer:\n",
+      "     customer    company  company_key  customer_key\n",
+      "0  Customer 1  Company 2            1             1\n",
+      "1  Customer 2  Company 2            1             2\n",
+      "2  Customer 3  Company 2            1             3\n",
+      "3  Customer 4  Company 2            1             4\n",
+      "4  Customer 5  Company 2            1             5\n",
+      "\n",
+      "Sample dim_date:\n",
+      "        date  date_key  year  month month_name  quarter\n",
+      "0 2020-01-01         1  2020      1    January        1\n",
+      "1 2020-02-01         2  2020      2   February        1\n",
+      "2 2020-03-01         3  2020      3      March        1\n",
+      "3 2020-04-01         4  2020      4      April        2\n",
+      "4 2020-05-01         5  2020      5        May        2\n",
+      "\n",
+      "Sample dim_category:\n",
+      "       category  category_key\n",
+      "0    Opening RR             1\n",
+      "1      New name             2\n",
+      "2         Churn             3\n",
+      "3  Back to base             4\n",
+      "4      Downsell             5\n",
+      "\n",
+      "Sample fact_recurring_revenue:\n",
+      "   company_key  customer_key  date_key  revenue\n",
+      "0            1             1        12   237.12\n",
+      "1            1             1        13   237.12\n",
+      "2            1             1        14   282.72\n",
+      "3            1             1        15   282.72\n",
+      "4            1             1        17   282.72\n",
+      "\n",
+      "Sample fact_waterfall:\n",
+      "   company_key  customer_key  date_key  category_key  revenue\n",
+      "0            1           1.0        27             1      0.0\n",
+      "1            1           1.0        28             1      0.0\n",
+      "2            1           1.0        29             1      0.0\n",
+      "3            1           1.0        30             1      0.0\n",
+      "4            1           1.0        31             1      0.0\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -15,9 +69,11 @@
     "rr_customer = pd.read_excel(FILE_PATH, sheet_name=\"Recurring Revenue by Customer\")\n",
     "rr_waterfall = pd.read_excel(FILE_PATH, sheet_name=\"Recurring Revenue Waterfall\")\n",
     "\n",
-    "# Ensure date format\n",
-    "rr_customer[\"date\"] = pd.to_datetime(rr_customer[\"date\"])\n",
-    "rr_waterfall[\"date\"] = pd.to_datetime(rr_waterfall[\"date\"])\n",
+    "# Ensure date format, coerce errors and drop invalid dates\n",
+    "rr_customer[\"date\"] = pd.to_datetime(rr_customer[\"date\"], errors=\"coerce\")\n",
+    "rr_customer = rr_customer.dropna(subset=[\"date\"])\n",
+    "rr_waterfall[\"date\"] = pd.to_datetime(rr_waterfall[\"date\"], errors=\"coerce\")\n",
+    "rr_waterfall = rr_waterfall.dropna(subset=[\"date\"])\n",
     "\n",
     "# DIM COMPANY\n",
     "dim_company = rr_customer[[\"company\"]].drop_duplicates().reset_index(drop=True)\n",
@@ -86,7 +142,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.14.0"
   }
  },
